"Borrowed" FLAC code from this guy http://stoyanov.in/2010/07/26/decoding-flac-audio-files-in-c/
Juggaar as hell

--- a/DiarizationGroundTruthTool/DiarizationGroundTruthTool.csproj
+++ b/DiarizationGroundTruthTool/DiarizationGroundTruthTool.csproj
@@ -92,6 +92,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FlacToWavWrapper.cs" />
+    <Compile Include="WavWriter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -101,6 +103,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DialogEntry.cs" />
+    <Compile Include="FlacReader.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -150,6 +153,11 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LibFlac.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
